--- a/client/index.html
+++ b/client/index.html
@@ -37,7 +37,7 @@
             <a href="" class="dropdown-toggle" dropdown-toggle><i class="fa fa-windows"></i> Tabellen</a>
             <ul class="dropdown-menu" role="menu">
               <li><a href="#locations" ng-click="navCollapsed=true"><i class="fa fa-tasks"></i> Räume</a></li>
-              <li><a href="#Win7mig/worklist" ng-click="navCollapsed=true"><i class="fa fa-wrench"></i> IOs</a></li>
+              <li><a href="#devices" ng-click="navCollapsed=true"><i class="fa fa-wrench"></i> IO-Devices</a></li>
             </ul>
           </li>
 
@@ -65,6 +65,7 @@
 
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/location.js"></script>
+	<script type="text/javascript" src="js/device.js"></script>
 
 
 	<script type="text/ng-template" id="login.html">
