--- a/client/index.html
+++ b/client/index.html
@@ -36,8 +36,10 @@
           <li class="dropdown" dropdown >
             <a href="" class="dropdown-toggle" dropdown-toggle><i class="fa fa-windows"></i> Tabellen</a>
             <ul class="dropdown-menu" role="menu">
-              <li><a href="#locations" ng-click="navCollapsed=true"><i class="fa fa-tasks"></i> Räume</a></li>
-              <li><a href="#devices" ng-click="navCollapsed=true"><i class="fa fa-wrench"></i> IO-Devices</a></li>
+              <li><a href="#actors" ng-click="navCollapsed=true"><i class="fa fa-lightbulb-o"></i> Aktoren</a></li>
+              <li><a href="#locations" ng-click="navCollapsed=true"><i class="fa fa-building"></i> Räume</a></li>
+              <li><a href="#devices" ng-click="navCollapsed=true"><i class="fa fa-share-alt-square"></i> IO-Devices</a></li>
+              <li><a href="#ports" ng-click="navCollapsed=true"><i class="fa fa-plug"></i> Ports</a></li>
             </ul>
           </li>
 
@@ -66,6 +68,8 @@
 	<script type="text/javascript" src="js/main.js"></script>
 	<script type="text/javascript" src="js/location.js"></script>
 	<script type="text/javascript" src="js/device.js"></script>
+	<script type="text/javascript" src="js/port.js"></script>
+	<script type="text/javascript" src="js/actor.js"></script>
 
 
 	<script type="text/ng-template" id="login.html">
