--- a/client/index.html
+++ b/client/index.html
@@ -13,6 +13,7 @@
 		<link rel="stylesheet" type="text/css" href="vendor/bootstrap/dist/css/bootstrap-theme.min.css">
 -->
 		<link rel="stylesheet" type="text/css" href="vendor/font-awesome/css/font-awesome.min.css">
+		<link rel="stylesheet" type="text/css" href="vendor/ngAnimate/css/ng-animation.css">
 		<link rel="stylesheet" type="text/css" href="css/navbar.css">
 
 		<title>NetIO</title>
